#pragma once

class BordeExterior
{
private:
    /* data */
public:
    BordeExterior(/* args */) {}
    ~BordeExterior() {}
};