#pragma once

class BordeInterior
{
private:
    /* data */
public:
    BordeInterior(/* args */) {}
    ~BordeInterior() {}
};