#pragma once

class Control
{
private:
    /* data */
public:
    Control(/* args */) {}
    ~Control() {}
};