#pragma once

class Coordenada
{
private:
    /* data */
public:
    Coordenada(/* args */) {}
    ~Coordenada() {}
};