#pragma once

class Escenario
{
private:
    /* data */
public:
    Escenario(/* args */) {}
    ~Escenario() {}
};