#pragma once

class Sonido
{
private:
    /* data */
public:
    Sonido(/* args */) {}
    ~Sonido() {}
};